# playwright-framework

./: README.md  pyproject.toml
playwright_python/: browser.py
